--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -20,6 +20,11 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="backup">
+                <span class="oi oi-file" aria-hidden="true"></span> Data backup
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="marecheck">
                 <span class="oi oi-star" aria-hidden="true"></span> Marecheck
             </NavLink>
@@ -30,7 +35,7 @@
 @code {
     bool collapseNavMenu = true;
 
-    string NavMenuCssClass => collapseNavMenu ? "collapse" : null;
+    string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
 
     void ToggleNavMenu()
     {
