Change base directory

--- a/Pages/Backup.razor
+++ b/Pages/Backup.razor
@@ -7,7 +7,7 @@
 
 
 <div>
-    <a href="/backup"><b>Data backup</b></a>
+    <a href="/backup"><b>data</b></a>
     @foreach (var (pathSegment, combinedPath) in DataBackupService.DirectorySplit(DirectoryPath))
     {
         <b> / </b>
