--- a/Pages/Marecheck.razor
+++ b/Pages/Marecheck.razor
@@ -1,16 +1,15 @@
 @page "/marecheck"
 @page "/marecheck/{DayNumber:int}"
 
-@using ChartJs.Blazor.Charts
-@using ChartJs.Blazor.ChartJS.Common
-@using ChartJs.Blazor.ChartJS.Common.Properties
-@using ChartJs.Blazor.ChartJS.Common.Enums
-@using ChartJs.Blazor.ChartJS.LineChart
-@using ChartJs.Blazor.ChartJS.Common.Axes
-@using ChartJs.Blazor.ChartJS.Common.Axes.Ticks
-@using Cloudberry.Data
+@using ChartJs.Blazor
+@using ChartJs.Blazor.LineChart
+@using ChartJs.Blazor.Common
+@using ChartJs.Blazor.Common.Enums
+@using ChartJs.Blazor.Common.Axes
+@using ChartJs.Blazor.Common.Axes.Ticks
+@using ChartJs.Blazor.Common.Handlers
 @using ChartJs.Blazor.Interop
-@using ChartJs.Blazor.ChartJS.Common.Handlers
+@using Cloudberry.Data
 @using Newtonsoft.Json.Linq
 
 @inject MarksDiaryService MarkWeightService
@@ -68,7 +67,7 @@
     public int? DayNumber { get; set; }
 
     private LineConfig config;
-    private Chart<LineConfig>? lineChart;
+    private Chart? lineChart;
 
     private SortedDictionary<int, Day> diary = new SortedDictionary<int, Day>();
     private int selectedDayNumber = -1;
