--- a/Pages/RobotDashboard.razor
+++ b/Pages/RobotDashboard.razor
@@ -1,4 +1,5 @@
 ﻿@page "/robot-dashboard"
+@implements IDisposable
 @using Cloudberry.DeepSpaceNetwork
 @inject RobotMessageHandler robotMessageHandler
 
@@ -6,6 +7,35 @@
 
 <button class="btn btn-primary" @onclick="async () => await robotMessageHandler.SendHello()">Send message</button>
 
-@code {
+<div>
+@foreach (var message in messages)
+{
+    <span class="text-secondary">@message</span>
+}
+</div>
 
+@code {
+    List<string> messages = new();
+
+    protected override void OnInitialized()
+    {
+        robotMessageHandler.OnRobotConnected += RobotConnectedHandler;
+        robotMessageHandler.OnRobotDisconnected += RobotDisconnectedHandler;
+    }
+
+    private void RobotConnectedHandler(string id)
+    {
+        messages.Add($"Robot '{id}' connected.");
+    }
+
+    private void RobotDisconnectedHandler(string id)
+    {
+        messages.Add($"Robot '{id}' disconnected.");
+    }
+
+    void IDisposable.Dispose()
+    {
+        robotMessageHandler.OnRobotConnected -= RobotConnectedHandler;
+        robotMessageHandler.OnRobotDisconnected -= RobotDisconnectedHandler;
+    }
 }
