--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -19,7 +19,7 @@
                 <span class="oi oi-clock" aria-hidden="true"></span> CPU temperature
             </NavLink>
         </li>
-        <li class="nav-item px-3">
+        @*<li class="nav-item px-3">
             <NavLink class="nav-link" href="backup">
                 <span class="oi oi-file" aria-hidden="true"></span> Data backup
             </NavLink>
@@ -28,7 +28,7 @@
             <NavLink class="nav-link" href="marecheck">
                 <span class="oi oi-star" aria-hidden="true"></span> Marecheck
             </NavLink>
-        </li>
+        </li>*@
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="robot-dashboard">
                 <span class="oi oi-wifi" aria-hidden="true"></span> Robot dashboard
